Fixed and optimized remote interface.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8874 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -2744,6 +2744,7 @@ IDR_HTML_DISABLED       HTML                    "Res\\Disabled.htm"
 // GZIP
 //
 
+IDR_HTML_STYLE          GZIP                    "Res\\style.css.gz"
 IDR_HTML_ABOUT          GZIP                    "Res\\About.htm.gz"
 IDR_HTML_BROWSER        GZIP                    "Res\\Browser.htm.gz"
 IDR_XML_DEFINITIONS     GZIP                    "Res\\Definitions.xml.gz"
