Fixed remote access settings page URL localization.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8875 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -1670,7 +1670,7 @@ BEGIN
     GROUPBOX        "&Enable:",IDC_STATIC,6,87,270,57,WS_GROUP
     CONTROL         "Enable Shareaza Remote Access:",IDC_REMOTE_ENABLE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,18,103,246,12
-    LTEXT           "URL",IDC_REMOTE_URL,18,120,246,10
+    LTEXT           "",IDC_REMOTE_URL,18,120,246,10
     GROUPBOX        "&Credentials:",IDC_STATIC,6,150,270,60,WS_GROUP
     LTEXT           "Choose a Username:",IDC_STATIC,18,168,72,12,SS_CENTERIMAGE
     EDITTEXT        IDC_REMOTE_USERNAME,96,168,96,12,ES_AUTOHSCROLL
