Added Jabber icon, fixed Skin color duplicate calculations.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8883 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -105,6 +105,7 @@ IDI_MAIL                ICON                    "Res\\Mail.ico"
 IDI_CONTACT_YAHOO       ICON                    "Res\\ContactYahoo.ico"
 IDI_CONTACT_AOL         ICON                    "Res\\ContactAOL.ico"
 IDI_CONTACT_ICQ         ICON                    "Res\\ContactICQ.ico"
+IDI_CONTACT_JABBER      ICON                    "Res\\ContactJabber.ico"
 IDI_COMPUTER_GRAY       ICON                    "Res\\ComputerGray.ICO"
 IDI_DISCOVERY_GRAY      ICON                    "Res\\DiscoveryGray.ico"
 IDI_DISCOVERY_BLUE      ICON                    "Res\\DiscoveryBlue.ico"
