Updated GeoIP database
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8900 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/GeoIP/GeoIP_9.vcproj
+++ b/GeoIP/GeoIP_9.vcproj
@@ -355,8 +355,20 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="Resource Files"
+			>
+			<File
+				RelativePath="GeoIP.rc"
+				>
+			</File>
+		</Filter>
 		<File
-			RelativePath="GeoIP.rc"
+			RelativePath=".\HowToUpdate.txt"
+			>
+		</File>
+		<File
+			RelativePath=".\License.txt"
 			>
 		</File>
 	</Files>
