Fixed BZlib 64-bit compilation
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8905 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/bzlib/bzlib_9.vcproj
+++ b/bzlib/bzlib_9.vcproj
@@ -141,6 +141,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="2"
+				ModuleDefinitionFile="$(TargetName).def"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				LargeAddressAware="2"
@@ -299,6 +300,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="1"
+				ModuleDefinitionFile="$(TargetName).def"
 				SubSystem="2"
 				LargeAddressAware="2"
 				OptimizeReferences="2"
