Updated BZLib and ZLib VS2010 projects.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8906 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/bzlib/bzlib_10.vcxproj
+++ b/bzlib/bzlib_10.vcxproj
@@ -124,6 +124,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <TargetMachine>MachineX64</TargetMachine>
+      <ModuleDefinitionFile>$(TargetName).def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -176,6 +177,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <SetChecksum>true</SetChecksum>
       <TargetMachine>MachineX64</TargetMachine>
+      <ModuleDefinitionFile>$(TargetName).def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -188,15 +190,15 @@
     <ClCompile Include="randtable.c" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="bzip2.def" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="bzlib.h" />
     <ClInclude Include="bzlib_private.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="bzlib.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bzlib.def" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
