--- a/bzlib/bzlib_10.vcxproj.filters
+++ b/bzlib/bzlib_10.vcxproj.filters
@@ -38,11 +38,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="bzip2.def">
-      <Filter>Source Files</Filter>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="bzlib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -57,5 +52,10 @@
     <ResourceCompile Include="bzlib.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bzlib.def">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
