--- a/zlib/zlibwapi_10.vcxproj
+++ b/zlib/zlibwapi_10.vcxproj
@@ -218,7 +218,10 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="gzio.c" />
+    <ClCompile Include="gzclose.c" />
+    <ClCompile Include="gzlib.c" />
+    <ClCompile Include="gzread.c" />
+    <ClCompile Include="gzwrite.c" />
     <ClCompile Include="infback.c" />
     <ClCompile Include="inffas8664.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
@@ -279,6 +282,7 @@
     <ClInclude Include="crc32.h" />
     <ClInclude Include="crypt.h" />
     <ClInclude Include="deflate.h" />
+    <ClInclude Include="gzguts.h" />
     <ClInclude Include="inffast.h" />
     <ClInclude Include="inflate.h" />
     <ClInclude Include="inftrees.h" />
