--- a/RegExp/RegExp_9.vcproj
+++ b/RegExp/RegExp_9.vcproj
@@ -210,6 +210,7 @@
 				StringPooling="true"
 				ExceptionHandling="2"
 				RuntimeLibrary="0"
+				EnableEnhancedInstructionSet="2"
 				FloatingPointModel="2"
 				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
