Updated SkinTranslate utility.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8917 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/tools/SkinTranslate/SkinTranslate.vcproj
+++ b/Languages/tools/SkinTranslate/SkinTranslate.vcproj
@@ -123,6 +123,7 @@
 				OmitFramePointers="true"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				RuntimeLibrary="0"
+				EnableEnhancedInstructionSet="2"
 				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
 				WarningLevel="4"
@@ -226,22 +227,6 @@
 			>
 			<File
 				RelativePath=".\SkinTranslate.rc"
-				>
-			</File>
-		</Filter>
-		<Filter
-			Name="Examples"
-			>
-			<File
-				RelativePath=".\make po.cmd"
-				>
-			</File>
-			<File
-				RelativePath=".\make pot.cmd"
-				>
-			</File>
-			<File
-				RelativePath=".\make xml.cmd"
 				>
 			</File>
 		</Filter>
