--- a/Languages/tools/SkinTranslate/SkinTranslate.rc
+++ b/Languages/tools/SkinTranslate/SkinTranslate.rc
@@ -27,8 +27,8 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,0,0,1
- PRODUCTVERSION 1,0,0,1
+ FILEVERSION 1,0,0,2
+ PRODUCTVERSION 1,0,0,2
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -45,12 +45,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Skin translate utility"
-            VALUE "FileVersion", "1, 0, 0, 1"
+            VALUE "FileVersion", "1, 0, 0, 2"
             VALUE "InternalName", "SkinTranslate"
-            VALUE "LegalCopyright", "Copyright (C) Nikolay Raspopov, 2009"
+            VALUE "LegalCopyright", "Copyright (C) Nikolay Raspopov, 2009-2011."
             VALUE "OriginalFilename", "SkinTranslate.exe"
             VALUE "ProductName", "Skin translate utility"
-            VALUE "ProductVersion", "1, 0, 0, 1"
+            VALUE "ProductVersion", "1, 0, 0, 2"
         END
     END
     BLOCK "VarFileInfo"
