Added DC++ upload queue interface elements, added "DC++ Guard" queue.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8929 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -3836,6 +3836,8 @@ BEGIN
     IDS_DOWNLOAD_416_WITHOUT_RANGE 
                             "Host ""%s"" sent a 416, without providing available ranges. Closing connection."
     IDS_UPLOAD_QUEUE_LIBRARY "Library Files"
+	IDS_UPLOAD_QUEUE_DC_GUARD 
+                            "DC++ Guard"
 END
 
 STRINGTABLE 
