Fixed forgotten tip string.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8946 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -4614,6 +4614,7 @@ BEGIN
     ID_LIBRARY_PANEL        "Show or hide the library detail panel."
     ID_LIBRARY_FOLDER_PROPERTIES 
                             "View and edit the properties of the selected album folder..."
+	ID_LIBRARY_FOLDER_DELETE "Delete the selected album folder."
     ID_LIBRARY_FOLDER_NEW   "Create a new album folder here..."
     ID_LIBRARY_UNLINK       "Remove the select files from the current album folder."
     ID_LIBRARY_FOLDER_METADATA 
