Fixed DC++ neighbors tip.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8972 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -4066,6 +4066,7 @@ BEGIN
     IDS_NEIGHBOUR_ED2K_SERVER "eDonkey Server"
     IDS_NEIGHBOUR_ED2K_LOWID "eDonkey (LowID)"
     IDS_NEIGHBOUR_ED2K_HIGHID "eDonkey (HighID)"
+	IDS_NEIGHBOUR_DCHUB     "DC++ Hub Connection"
 END
 
 STRINGTABLE 
