TorentWizard: Added new option "-comment". Added web-help button on every page. Improved auto-mode ("-sourcefile" option now can point to folder to create torrent package). Updated application icon.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8986 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/TorrentWizard/TorrentWizard_9.vcproj
+++ b/TorrentWizard/TorrentWizard_9.vcproj
@@ -402,10 +402,6 @@
 				>
 			</File>
 			<File
-				RelativePath="PageCommandline.cpp"
-				>
-			</File>
-			<File
 				RelativePath="PageComment.cpp"
 				>
 			</File>
@@ -504,10 +500,6 @@
 				>
 			</File>
 			<File
-				RelativePath="PageCommandline.h"
-				>
-			</File>
-			<File
 				RelativePath="PageComment.h"
 				>
 			</File>
@@ -579,6 +571,10 @@
 			</File>
 			<File
 				RelativePath="Res\Uninstall.ICO"
+				>
+			</File>
+			<File
+				RelativePath=".\Res\Wizard.bmp"
 				>
 			</File>
 			<File
