Added user list (not fully functional yet) to chat window.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8990 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -146,6 +146,8 @@ IDI_RATING_GOOD         ICON                    "Res\\RatingGood.ico"
 IDI_WIZARD_DOT          ICON                    "Res\\WizardDot.ico"
 IDI_INCOMING            ICON                    "Res\\in.ico"
 IDI_OUTGOING            ICON                    "Res\\out.ico"
+IDI_USER                ICON                    "Res\\user.ico"
+IDI_USER_ME             ICON                    "Res\\user_me.ico"
 ID_NETWORK_NULL         ICON                    "Res\\Network_NULL.ico"
 ID_NETWORK_G1           ICON                    "Res\\Network_G1.ico"
 ID_NETWORK_G2           ICON                    "Res\\Network_G2.ico"
