Improved Library tree tips: added "Free:" (disk space) to Folders tips, "Total Files:" and "Total Volume:" to Organizer, fixed too long to fit localized texts.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8995 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -3488,6 +3488,7 @@ STRINGTABLE
 BEGIN
     IDS_TIP_FILE_UNSTABLE   "Sources for this file may be unstable"
     IDS_TIP_UNTRUSTED       "Untrusted"
+	IDS_TIP_FREE_SPACE      "Free:"
 END
 
 STRINGTABLE 
