--- a/BugTrapSort/BugTrapSort.ini
+++ b/BugTrapSort/BugTrapSort.ini
@@ -25,7 +25,7 @@ output=C:\Projects\Shareaza\crashes\{VER_NUMBER}\{VER_REVISION}{VER_CONFIG}{VER_
 accept=shareaza.exe
 
 ; Ignored module or module:address names while stack parsing, caseinsensitive, use "|" as delimiter
-ignore=ieframe.dll|browseui.dll|ntshrui.dll|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|comctl32.dll|comdlg32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll|duser.dll|atipdlxx.dll
+ignore=btmmhook.dll|version.dll|ieframe.dll|browseui.dll|ntshrui.dll|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|comctl32.dll|comdlg32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll|duser.dll|atipdlxx.dll
 
 ; All other section names treated as sort rule names
 ; [Rule name]
@@ -35,6 +35,11 @@ ignore=ieframe.dll|browseui.dll|ntshrui.dll|zlibwapi.dll|msvcrt.dll|ntdll.dll|us
 
 ; ------------------------------------------------------------------------
 ; Other software
+
+[Lenovo Onekey Theater]
+if={MODULE}
+is=ActiveDetect32.dll
+output=C:\Projects\Shareaza\crashes\other\Lenovo Onekey Theater\{TIMESTAMP}
 
 [iS3 Anti-Spyware]
 if={MODULE}
